[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/DialogSystem.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/SouciSansNF.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="DialogSystem" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftDialog" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.854902 )
margin_left = 28.8299
margin_top = 28.8318
margin_right = 397.83
margin_bottom = 159.832
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="LeftDialog"]
margin_left = 12.0
margin_top = 12.0
margin_right = 354.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightDialog" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.854902 )
margin_left = 872.101
margin_top = 35.8299
margin_right = 1241.1
margin_bottom = 166.83
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="RightDialog"]
margin_left = 12.0
margin_top = 12.0
margin_right = 354.0
margin_bottom = 116.0
custom_fonts/normal_font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
